--- a/_posts/2021-04-01-post-0.MD
+++ b/_posts/2021-04-01-post-0.MD
@@ -14,4 +14,4 @@ First, I had to choose a blogging platform.  I thought coding a blog from scratc
 * All the code is on my machine, where I can tinker with it
 * I'm currently focusing on HTML, CSS, & JavaScript, so I don't really need support for anything else
 
-It was a challenge to get this up and running, but that's material for another post.
+Despite Jekyll's claim, "Get up and running in seconds," it was quite a lengthy challenge for me to get this up and running, but that's material for another post.
