--- a/_posts/2021-04-01-post-0.MD
+++ b/_posts/2021-04-01-post-0.MD
@@ -7,7 +7,7 @@ categories: Jekyll
 
 According to my [Thinkful](https://www.thinkful.com/) mentor Walter G. in a recent [article](https://www.thatsoftwaredude.com/content/11407/why-every-developer-needs-a-tech-blog-in-2021) on his website [thatsoftwaredude](https://www.thatsoftwaredude.com), "Whether you are just getting started with a programming language and a tech stack, or if you have 10 years of experience already and building complex scalable apps, you need to have a blog."  So, I decided to start a blog.
 
-First, I had to choose a blogging platform.  I thought coding a blog from scratch like Walter would be too hard, but using a WYSIWYG web editor like Blogger would be too easy.  I eventually decided that [Jekyll](https://jekyllrb.com/) would be "just right," for the following reasons:
+First, I had to choose a blogging platform.  I thought coding a blog from scratch like Walter would be too hard, but using a WYSIWYG web editor like Blogger would be too easy.  So I eventually decided that [Jekyll](https://jekyllrb.com/) would be "just right," for the following reasons:
 
 * Free, integrated hosting for Jekyll sites on [GitHub Pages](https://pages.github.com/) with custom domain name
 * I can write posts in Markdown on a local text editor and serve my site locally (with live refresh!) before pushing to GitHub to publish
