--- a/_posts/2021-04-01-post-0.MD
+++ b/_posts/2021-04-01-post-0.MD
@@ -10,8 +10,8 @@ According to my [Thinkful](https://www.thinkful.com/) mentor Walter G. in a rece
 First, I had to choose a blogging platform.  I thought coding a blog from scratch like Walter would be too hard, but using a WYSIWYG web editor like Blogger would be too easy.  So, I eventually decided that [Jekyll](https://jekyllrb.com/) would be "just right," for the following reasons:
 
 * I can host it for free on [GitHub Pages](https://pages.github.com/) with a custom domain name.
-* I can write posts in Markdown on my text editor, then serve the site locally (with live refresh!) before pushing to GitHub to publish.
+* I can write posts in Markdown on a local text editor and serve the site locally before pushing to GitHub to publish.
 * All the code is on my machine, where I can tinker with it.
-* I'm currently focusing on HTML, CSS, & JavaScript, so I don't really need anything else.
+* I'm currently focusing on HTML, CSS, & JavaScript, so I don't need anything else.
 
 Despite Jekyll's claim, "Get up and running in seconds," getting this up and running was a laborious process.  But that's material for another post.
