Edit quote post 0

--- a/_posts/2021-04-01-post-0.MD
+++ b/_posts/2021-04-01-post-0.MD
@@ -5,7 +5,7 @@ date:   "2021-04-01 23:00:00 -0600"
 categories: Jekyll
 ---
 
-According to my [Thinkful](https://www.thinkful.com/) mentor Walter G. in a recent [article](https://www.thatsoftwaredude.com/content/11407/why-every-developer-needs-a-tech-blog-in-2021) on his website [thatsoftwaredude](https://www.thatsoftwaredude.com), "Whether you are just getting started with a programming language and a tech stack, or if you have 10 years of experience already and building complex scalable apps, you need to have a blog."  So, I decided to start a blog.
+According to my [Thinkful](https://www.thinkful.com/) mentor Walter G. in a recent [article](https://www.thatsoftwaredude.com/content/11407/why-every-developer-needs-a-tech-blog-in-2021) on his website [thatsoftwaredude](https://www.thatsoftwaredude.com), "Whether you are just getting started with a programming language and a tech stack, or if you have 10 years of experience already and are building complex scalable apps, you need to have a blog."  So, I decided to start a blog.
 
 First, I had to choose a blogging platform.  I thought coding a blog from scratch like Walter would be too hard, but using a WYSIWYG web editor like Blogger would be too easy.  So, I eventually decided that [Jekyll](https://jekyllrb.com/) would be "just right," for the following reasons:
 
